# Pessoais

./: README.md  complex.py  csvmanager.py  db.py  file.csv  scrapper.py  teste.py
Assembly/MIPS/: sort.asm
Assembly/bubble/: bubble.asm  bubble.lst  gab.py
Assembly/fibonacci/: fib.asm  fib.lst  gab.py
Assembly/int/: int.lst
Assembly/palindrome/: palindrome  palindrome.asm
Assembly/print/: print  print.asm  print.lst
Assembly/sequence/: sequence.lst
Assembly/sqrt/: sqrt  sqrt.lst
Assembly/x86_64/bubble/: bubble
Assembly/x86_64/fibonacci/: fib  fib.asm
Assembly/x86_64/int/: int  int.asm
Assembly/x86_64/palindrome/: palindrome.lst
Assembly/x86_64/sequence/: sequence  sequence.asm
Assembly/x86_64/sqrt/: sqrt.asm
Assembly/x86_64/squares/: squares  squares.asm  squares.lst
C/LogDB/: CMakeLists.txt  main.cpp
C/LogDB/log/: LogModel.cpp  LogModel.h  LogRepository.h
C/LogDB/models/: Pessoa.cpp  Pessoa.h
C/LogDB/segments/: SegmentFile.cpp
C/Networking/openchat/: base.cpp  client.cpp  host.cpp
DataBase/: alunos.csv  csvmanager.py  db.py  sites.csv  teste.py
DataBase/LogDB/segments/: SegmentFile.h  SegmentManager.h
Networking/: client.cpp  host.cpp
Python/: cripto.py  donnut3.py  scrapper.py
Python/cripto/: cripto.py  gamal.py  gm.py  rsa.py  ww2.py
Python/lexical_analisis/: cradle.py  solvers.py
Python/lexical_analisis/10_chapter/: assembler.py  imprime.gm  input.gm  lexical_scanner.py  (+2 more)
Python/math/: complex.py  least_squares.py  matrices.py  polynomial.py
Python/nino/: nino.py  snake.py
search/: node.py  search.py  tree.py
(+32 files in other folders)
